[package]
name = "vesc-comm"
version = "0.2.0"
authors = ["Ferdia McKeogh <ferdia@mckeogh.tech>"]
edition = "2021"
keywords = ["nostd", "robotics", "embedded-hal-driver"]
category = "embedded"
license = "MPL-2.0"
homepage = "https://github.com/chocol4te/vesc-comm"
description = "An embedded Rust library for communicating with VESCs"
readme = "README.md"

[dependencies]
byteorder = { version = "1.4.3", default-features = false }
crc16 = "0.4.0"
tokio-serial = "5.4.4"
tokio = { version = "^1.8", features = ["io-util"]}

[dev-dependencies]
serialport = "4.2.0"
